--- a/latex/ch2.tex
+++ b/latex/ch2.tex
@@ -557,7 +557,7 @@ According to \citeauthor{introtodl}, deep learning ``is the subfield of machine 
 	\label{fig:fcdn}
 \end{figure}
 
-\citeauthor{introtodl} state that ``most machine learning algorithms as they exist now focus on function optimization, and the solutions yielded do not always explain the underlying trends within the data nor give the inferential power that artificial intelligence was trying to get close to'' \parencite[1]{introtodl}. However, machine learning methods have achieved success in many fields including natural language processing \parencite{nlpml}, computer vision \parencite{cvml}, and audio \parencite{audiodeeplearning}, indicating that data-driven approaches are useful, despite falling short of general artificial intelligence \parencite{generalai}.
+\citeauthor{introtodl} states that ``most machine learning algorithms as they exist now focus on function optimization, and the solutions yielded do not always explain the underlying trends within the data nor give the inferential power that artificial intelligence was trying to get close to'' \parencite[1]{introtodl}. However, machine learning methods have achieved success in many fields including natural language processing \parencite{nlpml}, computer vision \parencite{cvml}, and audio \parencite{audiodeeplearning}, indicating that data-driven approaches are useful, despite falling short of general artificial intelligence \parencite{generalai}.
 
 We also note that signal processing techniques and machine and deep learning are compatible with one another and can be used together \parencite{mlsp1, mlsp2}. According to \citeauthor{mldspmix}, signal processing and machine learning should both be considered in the study of acoustic signals, shown in Figure \ref{fig:dspmlmix}.
 
@@ -574,7 +574,7 @@ In machine learning, the input data is typically split into a training set and a
 
 \subsubsection{Convolutional neural networks (CNN)}
 
-Convolutional neural networks (CNN) ``are based on convolving their input with learnable kernels'' \parencite[3]{audiodeeplearning}. These are useful for both images and audio according because of their ability to exploit spatial or temporal correlation in data \parencite{cnns}. Figure \ref{fig:cnnbasic} shows how a learnable convolution kernel \textit{slides} over the pixels of the input image.
+Convolutional neural networks (CNN) ``are based on convolving their input with learnable kernels'' \parencite[3]{audiodeeplearning}. These are useful for both images and audio according because of their ability to exploit spatial or temporal correlation in data \parencite{cnns}. Figure \ref{fig:cnnbasic} shows how a learnable convolution kernel slides over the pixels of the input image.
 
 \begin{figure}[ht]
 	\centering
