--- a/latex/proposal.tex
+++ b/latex/proposal.tex
@@ -34,7 +34,7 @@
 
 \section{Introduction / Motivation}
 
-Music source separation is the task of extracting an estimate of one or more isolated sources or instruments, e.g., drums or vocals, from musical audio. The task of music demixing or unmixing considers the case where the musical audio is split into an estimate of all of its constituent sources that can be summed to get back the original mixture.\footnote{Thanks to Fabian-Robert St{\"o}ter for the discussion on the difference between music source separation, demixing, and unmixing.} Music demixing algorithms commonly operate on the Short-Time Fourier Transform (STFT) of the audio signal \parencite{musicsepgood}. Due to the time-frequency uncertainty principle \parencite{gabor1946}, the STFT of a signal cannot have maximal resolution in both time and frequency, and the tradeoff in time-frequency resolution can significantly affect music demixing results \parencite{tftradeoff1}. In this thesis, the sliCQT \parencite{slicq}, an STFT-like transform with varying time-frequency resolution, is explored as a replacement for the STFT in a state-of-the-art deep learning model for music demixing.
+Music source separation is the task of extracting an estimate of one or more isolated sources or instruments (for example, drums or vocals) from musical audio. The task of music demixing or unmixing considers the case where the musical audio is separated into an estimate of all of its constituent sources that can be summed to get back the original mixture. Music demixing algorithms commonly operate on the Short-Time Fourier Transform (STFT) of the audio signal \parencite{musicsepgood}. Due to the time-frequency uncertainty principle \parencite{gabor1946}, the STFT of a signal cannot have maximal resolution in both time and frequency, and the tradeoff in time-frequency resolution can significantly affect music demixing results \parencite{tftradeoff1}. In this thesis, the sliCQT \parencite{slicq}, an STFT-like transform with varying time-frequency resolution, is explored as a replacement for the STFT in a state-of-the-art deep learning model for music demixing.
 
 The STFT is computed by applying the discrete Fourier Transform on fixed-size windows of the input signal. \textcite{doerflerphd} argues, based on auditory and musical considerations, that musical signals should be analyzed with long windows in the low-frequency regions to capture detailed harmonic information, and short windows in the high-frequency regions to capture transients with sharp temporal localization. The sliCQ Transform, or sliCQT, is a realtime implementation of the Nonstationary Gabor Transform (NSGT) of \textcite{balazs}. The NSGT is an invertible time-frequency transform that applies the Fourier Transform on windows of the input signal that can be varied by frequency region. An important application of the NSGT and sliCQT is to implement the Constant-Q Transform (CQT) \parencite{jbrown} for music analysis, which uses a logarithmic frequency scale to better show the relationship between the fundamental frequency of a musical sound and its harmonics.
 
